--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
@@ -90,7 +90,7 @@
           @media(max-width: 991px){
             margin-top: 15px;
           }
-          img{
+          img, a{
             margin-left: 20px;
             cursor: pointer;
             display: inline-block;
