--- a/JegyzoInfo/ClientApp/src/app/components/_core/footer/footer.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/footer/footer.component.html
@@ -6,42 +6,44 @@
       </div>
       <div class="side rightSide">
         <div>
-          <a>
+          <a href="https://www.youtube.com/channel/UCev4dLLb8d5RYUmTy7kJjow" target="_blank">
             <img src="/assets/img/logo-youtube.svg" alt="" />
           </a>
-          <a>
+          <a (click)="clickTwitt()">
             <img src="/assets/img/logo-twitter.svg" alt="" />
           </a>
-          <a>
+          <a href="https://www.facebook.com/menedzserpraxis" target="_blank">
             <img src="/assets/img/logo-facebook.svg" alt="" />
           </a>
         </div>
         <div>
           <ul>
             <li>
-              <a href="">
+              <a href="http://menedzserpraxis.hu/adatvedelem.php" target="_blank">
                 Adatvédelem
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="http://menedzserpraxis.hu/impresszum.php" target="_blank">
                 Impresszum
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="http://menedzserpraxis.hu/aszf.php" target="_blank">
                 ÁSZF
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="http://menedzserpraxis.hu/cegunkrol.php" target="_blank">
                 Kapcsolat
               </a>
             </li>
           </ul>
         </div>
         <div>
-          <img src="/assets/img/MP_logo 2.svg" alt="" />
+          <a href="http://menedzserpraxis.hu/" target="_blank">
+            <img src="/assets/img/MP_logo 2.svg" alt="" />
+          </a>
         </div>
       </div>
     </div>
