--- a/JegyzoInfo/ClientApp/src/app/components/forgot-pass-dialog/forgot-pass-dialog.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/forgot-pass-dialog/forgot-pass-dialog.component.html
@@ -1,10 +1,10 @@
 <div class="dialogBox">
   <div class="closerX" (click)="close()"></div>
   <h4>
-    Jelszóemlékeztető
+    Jelszócsere
   </h4>
   <p>
-    Kérjük, írja be előfizetéséhez tartozó e-mail címét, ahová elküldjük Önnek jelszavát!
+    Kérjük, új jelszó beállításához írja be előfizetéséhez tartozó e-mail címét!
   </p>
   <div class="formWrap">
     <form name="contactForm">
