--- a/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.html
@@ -147,7 +147,7 @@
       </div>
     </div>
     <div class="buttonWrap">
-      <button class="orange" (click)="clickMoreInfo()">
+      <button class="orange" (click)="clickMoreInfo()" *ngIf="!userService.loginHappened.value">
         Érdekel az előfizetés
       </button>
     </div>
