--- a/JegyzoInfo/ClientApp/src/app/components/login-dialog/login-dialog.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/login-dialog/login-dialog.component.scss
@@ -8,6 +8,11 @@
   padding-bottom: 66px;
   padding-left: 100px;
   padding-right: 100px;
+  @media(max-width: 767px){
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 
   .closerX{
     width: 20px;
